- related to issue #81 - fix wrong lings for the JavaDoc - define inner classes static (if possible) - some code cleaning